syntax = "proto3";

// Define the default package for generated code.
// This is the logical package name used within the .proto file.
package greeter;

// Go-specific options
// This sets the Go import path for the generated files.
// IMPORTANT: Replace `your_go_module_path` with the actual module path from your `ai_orchestrator/go.mod` file.
// For example, if your `go.mod` has `module github.com/yourusername/yourproject/ai_orchestrator`,
// then this option would be `option go_package = "github.com/yourusername/yourproject/ai_orchestrator/greeter";`.
// The "/greeter" suffix typically indicates a subdirectory for the generated protobuf files,
// aligning with the logical package name.
option go_package = "ai_orchestrator/greeter";

// The Greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}